--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.css
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.css
@@ -9,6 +9,7 @@
 .select select{
     height: 1.5rem;
 }
+
 .count-preview {
     background-color: #E4F3FC;
     padding:0.5rem;
@@ -83,6 +84,7 @@ button.btn:focus {
     color: #262262;
     padding: 0.5rem;
     font-weight: 500;
+    display: flex;
 }
 .dropdown, .dropdown .dropdown-toggle{
     width: 100%;
@@ -123,9 +125,10 @@ button.btn:focus {
 }
 
 .attr-refresh {
-    margin-left: 0.5rem;
-    color: #7EC79B;
+    margin-left: 1rem;
+    color: #2691D0;
     cursor: pointer;
+    font-size: 12PX;
 }
 
 .radio {
