--- a/ui/src/app/views/cohort-list/component.html
+++ b/ui/src/app/views/cohort-list/component.html
@@ -29,7 +29,7 @@
               <clr-icon shape="copy"></clr-icon>
               Clone
             </button>
-            <button class="action-item"
+            <button class="action-item edit-button"
                     (click)="beginEdit(cohort)"
                     [class.disabled]="actionsDisabled"
                     [disabled]="actionsDisabled">
