[RW-1245][risk=no]Explore link fixes (#1141)
*  RW-1245 explore link fixes

*  RW-1245 css changes

*  RW-1245 explore link fixes

*  RW-1245 css changes

--- a/ui/src/app/cohort-search/modal/modal.component.css
+++ b/ui/src/app/cohort-search/modal/modal.component.css
@@ -75,6 +75,7 @@
 .nav-link {
   margin-bottom: -4px!important;
 }
+
 button{
   font-weight:300!important;
 }
@@ -195,6 +196,14 @@ h5.selection-title {
   color: #262262;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.explore-link {
+  padding-bottom: 0.8rem;
+}
+
+.explore-link >a:visited {
+  color: #007cbb;
 }
 
 @media all and (max-width: 900px) {
