--- a/ui/src/app/cohort-search/node-info/node-info.component.html
+++ b/ui/src/app/cohort-search/node-info/node-info.component.html
@@ -5,7 +5,7 @@
       type="button"
       class="btn btn-sm btn-link selection-button"
       [class.pm]="node.get('type') === criteriaTypes.PM"
-      [disabled]="isSelected"
+      [disabled]="isSelected || isSelectedParent"
       (click)="select($event)">
     <clr-icon *ngIf="isSelected" shape="check-circle" size="20" class="selection-icon"></clr-icon>
     <clr-icon *ngIf="!isSelected && !node.get('hasAttributes')" shape="plus-circle" size="20" class="selection-icon"></clr-icon>
@@ -13,7 +13,10 @@
   </button>
 
   <!-- CODE -->
-  <div class="code font-weight-bold" [innerHTML]="displayCode | safeHtml"></div>
+  <div class="code font-weight-bold"
+    [innerHTML]="displayCode | safeHtml">
+    {{ displayCode }}
+  </div>
 
   <!-- NAME -->
   <div #name
