RW-1255 css changes

--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
@@ -73,9 +73,9 @@
                 (ngModelChange)="inputChange()"
                 required>
               <span *ngIf="hasUnits()">{{units[node.get('subtype')]}}</span>
-              <span *ngIf="isMeasurement()">
-                Range: {{attr.MIN}} - {{attr.MAX}}
-              </span>
+              <!--<span *ngIf="isMeasurement()">-->
+                <!--Range: {{attr.MIN}} - {{attr.MAX}}-->
+              <!--</span>-->
             </div>
           </div>
       </div>
