fix ehr view where search results got trumped by initial load of all results when it takes long time. Cleanup

--- a/public-ui/src/app/data-browser/chart/chart.component.html
+++ b/public-ui/src/app/data-browser/chart/chart.component.html
@@ -1,4 +1,4 @@
-<chart class="standard-chart"  [options]="chartOptions"></chart>
+<chart *ngIf="chartOptions" class="standard-chart"  [options]="chartOptions"></chart>
 <!-- save instance version for fancy highcharts stuff later
 <chart class="standard-chart"  [options]="chartOptions" (load)="saveInstance($event.context )"></chart>
 -->
