RW-1248 spelling correction

--- a/ui/src/app/cohort-search/modifier-page/modifier-page.component.css
+++ b/ui/src/app/cohort-search/modifier-page/modifier-page.component.css
@@ -53,7 +53,7 @@
 
 .count-preview  .disable-link {
     pointer-events: none;
-    opavity: 0.3;
+    opacity: 0.3;
 }
 .count-preview  .add-button {
     border-color:transparent;
