--- a/ui/src/app/cohort-search/modifier-page/modifier-page.component.css
+++ b/ui/src/app/cohort-search/modifier-page/modifier-page.component.css
@@ -112,13 +112,7 @@
     width: 8rem !important;
 }
 
-.greyed-button {
-    pointer-events: none;
-    opacity: 0.3;
-    background-color: #c3c3c3!important;
-    border-radius: 0.125rem;
-    border: transparent!important;
-}.label-flex {
+.label-flex {
     display: flex;
     padding-top: 1.4rem;
     padding-bottom: 0.1rem;
@@ -130,4 +124,12 @@
     width: 1rem;
     height: 0.7rem;
 
+}
+
+.greyed-button {
+    pointer-events: none;
+    opacity: 0.3;
+    background-color: #c3c3c3 !important;
+    border-radius: 0.125rem;
+    border: transparent !important;
 }
