RW-1249 remived important and added conditional class

--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
@@ -95,8 +95,8 @@
     <div *ngIf="isValid(attrForm) || attrs.EXISTS" class="count-preview ">
       <div class="row">
         <div *ngIf="!attrs.EXISTS" class="col-lg-3">
-          <button type="button" [ngClass]="{'greyed-button': preview.get('requesting')}"
-            class="btn calculate-btn"
+          <button type="button" [ngClass]="[ preview.get('requesting')? 'greyed-button': 'calculate-btn']"
+            class="btn"
             [disabled]="rangeAlert"
             [clrLoading]="preview.get('requesting')"
             (click)="requestPreview(attrForm)">
