--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.css
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.css
@@ -157,9 +157,11 @@ input[type=radio] {
 }
 
 .greyed-button {
+    cursor: not-allowed;
     pointer-events: none;
     opacity: 0.3;
-    background-color: #c3c3c3 !important;
+    background-color: #c3c3c3;
     border-radius: 0.125rem;
-    border: transparent !important;
+    border: transparent;
+    color: white;
 }
