--- a/ui/src/app/cohort-search/modifier-page/modifier-page.component.css
+++ b/ui/src/app/cohort-search/modifier-page/modifier-page.component.css
@@ -127,9 +127,11 @@
 }
 
 .greyed-button {
+    cursor: not-allowed;
     pointer-events: none;
     opacity: 0.3;
-    background-color: #c3c3c3 !important;
+    background-color: #c3c3c3;
     border-radius: 0.125rem;
-    border: transparent !important;
+    border: transparent;
+    color: white;
 }
