--- a/ui/src/app/views/homepage/component.html
+++ b/ui/src/app/views/homepage/component.html
@@ -85,7 +85,9 @@
                 </div>
               </div>
             </div>
-
+              <div class="col-md-3">
+                <app-recent-work-component></app-recent-work-component>
+              </div>
           </div>
         </div>
       </div>
