[RW-1249][risk=no]Modifiers and Attributes - change calculate button (#1156)
*  RW-1249 cancel button changes

*  RW-1249 button css changes for greyed out

*  RW-1249 modifier changes

*  RW-1249 calculate button disabled and spinner changes

*  RW-1249 css fixes

*  RW-1249 remived important and added conditional class

*  RW-1249 cancel button changes

*  RW-1249 button css changes for greyed out

*  RW-1249 modifier changes

*  RW-1249 calculate button disabled and spinner changes

*  RW-1249 css fixes

*  RW-1249 remived important and added conditional class

--- a/ui/src/app/cohort-search/modifier-page/modifier-page.component.css
+++ b/ui/src/app/cohort-search/modifier-page/modifier-page.component.css
@@ -125,3 +125,13 @@
     height: 0.7rem;
 
 }
+
+.greyed-button {
+    cursor: not-allowed;
+    pointer-events: none;
+    opacity: 0.3;
+    background-color: #c3c3c3;
+    border-radius: 0.125rem;
+    border: transparent;
+    color: white;
+}
