--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.css
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.css
@@ -155,3 +155,13 @@ input[type=radio] {
     width: 24%;
     margin-right: 1%;
 }
+
+.greyed-button {
+    cursor: not-allowed;
+    pointer-events: none;
+    opacity: 0.3;
+    background-color: #c3c3c3;
+    border-radius: 0.125rem;
+    border: transparent;
+    color: white;
+}
