--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
@@ -94,7 +94,7 @@
     </ng-container>
     <div *ngIf="isValid(attrForm) || attrs.EXISTS" class="count-preview ">
       <div class="row">
-        <div *ngIf="!attrs.EXISTS" class="col-lg-3">
+        <div *ngIf="showCalc()" class="col-lg-3">
           <button type="button"
             class="btn calculate-btn"
             [disabled]="rangeAlert"
