--- a/public-ui/src/app/views/ehr-view/ehr-view.component.html
+++ b/public-ui/src/app/views/ehr-view/ehr-view.component.html
@@ -1,41 +1,5 @@
 
 
-<!-- old search box and title
-<div class="row flex-items-xs-middle">
-  <div class="col-xs-12">
-    <h2 class="title">  {{title}} </h2>
-  </div>
-  <div class="col-md-8 col-sm-10 col-xs-11">
-    <div class="white-card-box" >
-      <div class="row search  flex-items-xs-between">
-        <div class="col-xs-12 flex-xs-middle search-input-full">
-          <div class="search-wrapper ">
-            <clr-icon shape="search" class="input-icon-absolute is-info"></clr-icon>
-            <input type="text" id="search-db" placeholder="Keyword Search" [formControl]="searchText" autofocus>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-4 col-sm-2 col-xs-1" *ngIf="loading" >
-    <span  class="spinner spinner-lg hidden-sm-down"></span>
-    <span  class="spinner spinner-md hidden-md-up hidden-xs-down"></span>
-    <span  class="spinner spinner-sm hidden-sm-up"></span>
-
-  </div>
-</div>
--->
-
-<!--
-<div class="row">
-  <p *isChrome>I'll show you if I'm a chrome browser.</p>
-  <p *xl>I'll show you if I'm a xl screen size.</p>
-  <p *lg>I'll show you if I'm a lg screen size.</p>
-  <p *md>I'll show you if I'm a md screen size.</p>
-  <p *sm>I'll show you if I'm a sm screen size.</p>
-  <p *xs>I'll show you if I'm a xs screen size.</p>
-</div> -->
-
 <div class="row flex-items-xs-middle">
   <div class="col-xs-12 col-no-gutter">
     <h2 class="title">  {{title}} </h2>
@@ -43,14 +7,6 @@
 </div>
 
 <div class="row ">
-  <!-- different style search box
-    <div class="col-md-8 col-sm-10 col-xs-11 white-card-box flex-xs-middle search-input-full">
-    <div class="search-wrapper ">
-      <clr-icon shape="search" class="input-icon-absolute is-info"></clr-icon>
-      <input type="text" id="search-db" placeholder="Keyword Search" [formControl]="searchText" autofocus>
-    </div>
-  </div>-->
-
   <div class="white-card-box flex-items-xs-middle col-md-8 col-sm-10 col-xs-11" >
     <div class="row search flex-items-xs-between">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 flex-xs-middle search-input-full">
@@ -102,9 +58,6 @@
 
     <div class="col-md-8 col-sm-6 col-xs-12 chart-wrapper flex-xs-middle">
       <app-chart [concepts]="top10Results" [chartTitle]="'Top 10 by particpant count'" [pointWidth]="15" [backgroundColor]="'#D9E4EA'"> </app-chart>
-
-     <!-- <app-chart [concepts]="top10Results" [chartTitle]="'Top 10 by particpant count'" [pointWidth]="20" [backgroundColor]="'#D9E4EA'"> </app-chart> -->
-
     </div>
 
 </div>
@@ -130,7 +83,10 @@
           <div class="col-md-2 grid-header flex-xs-middle"> {{dbDomain.domainDisplay}}</div>
           <div class="col-md-4 grid-header flex-xs-middle"> Synonyms </div>
           <div class="col-md-2 grid-header flex-xs-middle"> Particpants of <b> {{totalParticipants | number}}</b> </div>
-          <div class="col-md-3 grid-header flex-xs-middle info-text"> <clr-icon class="" shape="info-standard" class="is-solid"></clr-icon> What is SNOMED? </div>
+          <div class="col-md-3 grid-header flex-xs-middle info-text">
+            Vocabulary Code
+            <clr-icon class="" shape="info-standard" class="is-solid"></clr-icon>
+          </div>
           <div class="col-md-1 grid-header flex-xs-middle info-text"> View graphs </div>
 
         </div>
