--- a/ui/src/app/views/unregistered/component.html
+++ b/ui/src/app/views/unregistered/component.html
@@ -1,4 +1,7 @@
 <div [ngSwitch]="idvStatus">
+  <p *ngSwitchCase="null">
+    Loading...
+  </p>
   <p *ngSwitchCase="IdVerificationStatus.REJECTED">
     Identity verification rejected, please create an account with an approved contact email or contact the DRC PI for your institution.
   </p>
