[RW-1255][risk=no]Measurements - range should not show up twice for "between" (#1160)
*  RW-1255 css changes

*  RW-1255 range container changes

* RW-1255 changes for shifted event date

* [RW-1137][risk=no] adding checks for Search Parameter and conceptid. (#1154)

* RW-1137 adding checks for Search Parameter and conceptid.

* RW-1137 removed unused import.

* [RW-1248][risk=no]Modifiers - Change "Event Date" text  to “Shifted Event Date” and add a tooltip  (#1153)

*  RW-1248 event date text change and tooltip added

*  RW-1248 spelling correction

*  RW-1248 event date text change and tooltip added

*  RW-1248 spelling correction

* [RW-1249][risk=no]Modifiers and Attributes - change calculate button (#1156)

*  RW-1249 cancel button changes

*  RW-1249 button css changes for greyed out

*  RW-1249 modifier changes

*  RW-1249 calculate button disabled and spinner changes

*  RW-1249 css fixes

*  RW-1249 remived important and added conditional class

*  RW-1249 cancel button changes

*  RW-1249 button css changes for greyed out

*  RW-1249 modifier changes

*  RW-1249 calculate button disabled and spinner changes

*  RW-1249 css fixes

*  RW-1249 remived important and added conditional class

* [RW-1256][risk=no] Populate modifier fields when editing (#1158)

* RW-1256 set modifier dropdowns with saved values

* RW-1256 rerun github checks

* [RW-1249][risk=no]Modifiers and Attributes - change calculate button (#1156)

*  RW-1249 cancel button changes

*  RW-1249 button css changes for greyed out

*  RW-1249 modifier changes

*  RW-1249 calculate button disabled and spinner changes

*  RW-1249 css fixes

*  RW-1249 remived important and added conditional class

*  RW-1249 cancel button changes

*  RW-1249 button css changes for greyed out

*  RW-1249 modifier changes

*  RW-1249 calculate button disabled and spinner changes

*  RW-1249 css fixes

*  RW-1249 remived important and added

--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
@@ -56,9 +56,6 @@
                 (ngModelChange)="inputChange()"
                 required>
               <span *ngIf="hasUnits()">{{units[node.get('subtype')]}}</span>
-              <span *ngIf="isMeasurement()">
-                Range: {{attr.MIN}} - {{attr.MAX}}
-              </span>
             </div>
             <div *ngIf="isBetween(i, attrForm)" class="form-group and-text">
               <div>and</div>
@@ -73,10 +70,10 @@
                 (ngModelChange)="inputChange()"
                 required>
               <span *ngIf="hasUnits()">{{units[node.get('subtype')]}}</span>
-              <span *ngIf="isMeasurement()">
-                Range: {{attr.MIN}} - {{attr.MAX}}
-              </span>
             </div>
+              <span class="range-padding" *ngIf="isMeasurement() && showInput(i, attrForm)">
+              Range: {{attr.MIN}} - {{attr.MAX}}
+              </span>
           </div>
       </div>
       <ng-container *ngIf="attrs.CAT.length">
