RW-1258 added css for dropdown

--- a/ui/src/app/cohort-search/search-group-select/search-group-select.component.css
+++ b/ui/src/app/cohort-search/search-group-select/search-group-select.component.css
@@ -1,6 +1,7 @@
 .selection-button {
   color: rgb(114, 114, 114);
   border-color: rgb(195, 195, 195);
+  font-weight: 100 !important
 }
 
 .selection-button:hover {
