--- a/ui/src/app/cohort-search/search-group/search-group.component.css
+++ b/ui/src/app/cohort-search/search-group/search-group.component.css
@@ -33,6 +33,7 @@
 .selection-button {
   color: rgb(114, 114, 114);
   border-color: rgb(195, 195, 195);
+  font-weight: 100 !important;
 }
 
 .selection-button:hover {
