RW-1260 fix encounter dropdown width and hide options with zero counts

--- a/ui/src/app/cohort-search/modifier-page/modifier-page.component.css
+++ b/ui/src/app/cohort-search/modifier-page/modifier-page.component.css
@@ -93,6 +93,10 @@
     width: 12rem;
 }
 
+.dropdown-menu.encounters {
+    width: auto;
+}
+
 .modifier-container {
     display: flex;
     padding-top: 0.5rem;
