RW-998 format counts with number pipe

--- a/ui/src/app/cohort-search/demographics/demographics.component.html
+++ b/ui/src/app/cohort-search/demographics/demographics.component.html
@@ -48,7 +48,7 @@
       <div class="slider">
         <div class="count-wrapper">
           <span *ngIf="ageCount" class="badge badge-info">
-            {{ ageCount }}
+            {{ ageCount | number }}
           </span>
         </div>
         <nouislider
