RW-998 get slider connect DOM element on age range change

--- a/ui/src/app/cohort-search/demographics/demographics.component.html
+++ b/ui/src/app/cohort-search/demographics/demographics.component.html
@@ -46,7 +46,7 @@
         class="number-display"
         (blur)="checkMin()">
       <div class="slider">
-        <div class="count-wrapper">
+        <div id="age-count" class="count-wrapper">
           <span *ngIf="ageCount" class="badge badge-info">
             {{ ageCount | number }}
           </span>
