--- a/ui/src/app/views/homepage/component.html
+++ b/ui/src/app/views/homepage/component.html
@@ -77,7 +77,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-3" style="margin-bottom: 2rem;">
+            <div style="margin-bottom: 2rem;">
               <div class="card add-card" (click)="addWorkspace()">
                 <div class="card-text">
                   Create a <br/> New Workspace <br/>
@@ -85,8 +85,8 @@
                 </div>
               </div>
             </div>
-              <div class="col-md-3">
-                <app-recent-work-component></app-recent-work-component>
+              <div style="margin-left: 2.4375rem;">
+                <app-recent-work></app-recent-work>
               </div>
           </div>
         </div>
