--- a/ui/src/app/views/card/component.html
+++ b/ui/src/app/views/card/component.html
@@ -1,29 +1,36 @@
-<div class="card">
+<div class="item-card {{type}}-card">
   <div>
-    <clr-dropdown>
-      <button type="button" clrDropdownTrigger>
-        <clr-icon shape="ellipsis-vertical" class="ellipsis-vertical"></clr-icon>
-      </button>
-      <clr-dropdown-menu *clrIfOpen>
-        <div *ngFor="let action of actions">
-          <button>
-            <clr-icon shape=action.class></clr-icon>
-          </button>
-
-        </div>
-      </clr-dropdown-menu>
-    </clr-dropdown>
-     {{card.notebook?.name}} {{card.cohort?.name}}
-  </div>
-  <div>
-    {{card.cohort?.description}}
-  </div>
-  <div class="footer">
+    <div class="header-area">
+      <clr-dropdown>
+        <button type="button" clrDropdownTrigger>
+          <clr-icon shape="ellipsis-vertical" class="ellipsis-vertical"></clr-icon>
+        </button>
+        <clr-dropdown-menu *clrIfOpen>
+          <div *ngFor="let action of actions">
+            <button
+                class="action-item"
+                (click)=action.link>
+              <clr-icon shape=action.class></clr-icon>
+              {{action.text}}
+            </button>
+          </div>
+        </clr-dropdown-menu>
+      </clr-dropdown>
+      <div class="name">
+        {{card.notebook?.name}}
+        {{card.cohort?.name}}
+      </div>
+    </div>
+    <div>
+      {{card.cohort?.description}}
+    </div>
+    <div class="footer">
       <div class="last-modified">Last Updated <br/>{{card.modifiedTime | date}}</div>
-      <div class="item-type type">
+      <div class="item-type {{type}}">
         <div *ngIf="card.cohort">CH</div>
         <div *ngIf="card.notebook">NB</div>
       </div>
+    </div>
   </div>
-
 </div>
+
